feat: 유저의 루트 커리큘럼 학습현황 리스트 반환 기능 구현
요청: URI path 내 {userId}
반환: CurriculumRootResponseDto
구성요소: CurriculumRootElementDto